--- a/policies/policies.yaml
+++ b/policies/policies.yaml
@@ -5,9 +5,9 @@ policies:
     filters:
       - type: last_used
         days: 1
-      - type: tag
-        key: environment
-        value: dev
+      # - type: tag
+      #   key: environment
+      #   value: dev
     actions:
       - type: stop
     exclusions:
@@ -85,8 +85,8 @@ policies:
           - name: Standard
             min_dtu: 10
             max_dtu: 100
-            off_peak_dtu: 20
-            peak_dtu: 50
+            off_peak_dtu: 50
+            peak_dtu: 20
             off_peak_start: "20:00"
             off_peak_end: "06:00"
           - name: Premium
