--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
   pull_request:
     branches:
       - main
-  schedule:
-    - cron: '0 0 * * *'  # Runs daily at midnight UTC
+  # schedule:
+    # - cron: '0 0 * * *'  # Runs daily at midnight UTC
 
 jobs:
   build:
