--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+contourpy==1.2.1
 cryptography==42.0.7
 cycler==0.12.1
 entrypoints==0.4
@@ -35,10 +36,12 @@ jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib==3.9.0
 mdurl==0.1.2
 msal==1.28.0
 msal-extensions==1.1.0
 msrest==0.7.1
+numpy==1.26.4
 oauthlib==3.2.2
 packaging==24.0
 pandas==2.2.2
