--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -2,7 +2,7 @@ azure:
   resource_group: "rg-test"
 
 app_insights:
-  instrumentation_key: ${{ secrets.APPINSIGHTS_INSTRUMENTATIONKEY }}
+  instrumentation_key: "fd6a4fe8-3952-4b5d-8d55-68b736ab7dfc;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/;ApplicationId=a371bc09-fd29-48a2-958f-36f0bd811fc0"
 
 policies:
   policy_file: "policies/policies.yaml"
