--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,16 +29,16 @@ jobs:
         pip install -r requirements.txt
         
     - name: Set environment variables for Azure credentials
+      shell: pwsh
       run: |
-          echo "AZURE_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}" >> $GITHUB_ENV
-          echo "AZURE_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}" >> $GITHUB_ENV
-          echo "AZURE_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}" >> $GITHUB_ENV
-
-    - name: Verify environment variables
-      run: |
-          echo "AZURE_CLIENT_ID=$AZURE_CLIENT_ID"
-          echo "AZURE_TENANT_ID=$AZURE_TENANT_ID"
-          echo "AZURE_CLIENT_SECRET=$AZURE_CLIENT_SECRET"
+          echo "Setting environment variables"
+          $env:AZURE_CLIENT_ID = "${{ secrets.AZURE_CLIENT_ID }}"
+          $env:AZURE_TENANT_ID = "${{ secrets.AZURE_TENANT_ID }}"
+          $env:AZURE_CLIENT_SECRET = "${{ secrets.AZURE_CLIENT_SECRET }}"
+          
+          echo "AZURE_CLIENT_ID=$env:AZURE_CLIENT_ID"
+          echo "AZURE_TENANT_ID=$env:AZURE_TENANT_ID"
+          echo "AZURE_CLIENT_SECRET=$env:AZURE_CLIENT_SECRET"
     - name: Run Cost Optimizer in Dry Run Mode
       run: |
         python src/main.py --mode dry-run
