--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,10 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    env:
+      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
 
     steps:
     - name: Checkout repository
@@ -28,14 +32,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
-    - name: Set environment variables for Azure credentials
+    - name: Verify environment variables
       shell: pwsh
       run: |
-          echo "Setting environment variables"
-          $env:AZURE_CLIENT_ID = "${{ secrets.AZURE_CLIENT_ID }}"
-          $env:AZURE_TENANT_ID = "${{ secrets.AZURE_TENANT_ID }}"
-          $env:AZURE_CLIENT_SECRET = "${{ secrets.AZURE_CLIENT_SECRET }}"
-          
           echo "AZURE_CLIENT_ID=$env:AZURE_CLIENT_ID"
           echo "AZURE_TENANT_ID=$env:AZURE_TENANT_ID"
           echo "AZURE_CLIENT_SECRET=$env:AZURE_CLIENT_SECRET"
