--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,19 @@ jobs:
 
       - name: Verify environment variables
         run: |
-          echo "CONFIG_FILE=$CONFIG_FILE"
-          echo "AZURE_SUBSCRIPTION_ID=${AZURE_SUBSCRIPTION_ID}"
-          echo "AZURE_CLIENT_ID=${AZURE_CLIENT_ID}"
-          echo "AZURE_TENANT_ID=${AZURE_TENANT_ID}"
-          echo "AZURE_CLIENT_SECRET=${AZURE_CLIENT_SECRET}"
-          echo "APPINSIGHTS_INSTRUMENTATIONKEY=${APPINSIGHTS_INSTRUMENTATIONKEY}"
+          echo "CONFIG_FILE=$env:CONFIG_FILE"
+          echo "AZURE_SUBSCRIPTION_ID=$env:AZURE_SUBSCRIPTION_ID"
+          echo "AZURE_CLIENT_ID=$env:AZURE_CLIENT_ID"
+          echo "AZURE_TENANT_ID=$env:AZURE_TENANT_ID"
+          echo "AZURE_CLIENT_SECRET=$env:AZURE_CLIENT_SECRET"
+          echo "APPINSIGHTS_INSTRUMENTATIONKEY=$env:APPINSIGHTS_INSTRUMENTATIONKEY"
 
       - name: Run Azure Cost Optimizer
         run: python src/main.py --mode dry-run
+        env:
+          CONFIG_FILE: ${{ secrets.CONFIG_FILE }}
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+          APPINSIGHTS_INSTRUMENTATIONKEY: ${{ secrets.APPINSIGHTS_INSTRUMENTATIONKEY }}
