--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,23 +19,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Set environment variables
-        run: |
-          echo "CONFIG_FILE=configs/config.yaml" >> $GITHUB_ENV
-          echo "AZURE_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSCRIPTION_ID }}" >> $GITHUB_ENV
-          echo "AZURE_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}" >> $GITHUB_ENV
-          echo "AZURE_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}" >> $GITHUB_ENV
-          echo "AZURE_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}" >> $GITHUB_ENV
-          echo "APPINSIGHTS_INSTRUMENTATIONKEY=${{ secrets.APPINSIGHTS_INSTRUMENTATIONKEY }}" >> $GITHUB_ENV
-
       - name: Verify environment variables
         run: |
-          echo "CONFIG_FILE=$env:CONFIG_FILE"
-          echo "AZURE_SUBSCRIPTION_ID=$env:AZURE_SUBSCRIPTION_ID"
-          echo "AZURE_CLIENT_ID=$env:AZURE_CLIENT_ID"
-          echo "AZURE_TENANT_ID=$env:AZURE_TENANT_ID"
-          echo "AZURE_CLIENT_SECRET=$env:AZURE_CLIENT_SECRET"
-          echo "APPINSIGHTS_INSTRUMENTATIONKEY=$env:APPINSIGHTS_INSTRUMENTATIONKEY"
+          echo "CONFIG_FILE=configs/config.yaml"
+          echo "AZURE_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+          echo "AZURE_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}"
+          echo "AZURE_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}"
+          echo "AZURE_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}"
+          echo "APPINSIGHTS_INSTRUMENTATIONKEY=${{ secrets.APPINSIGHTS_INSTRUMENTATIONKEY }}"
 
       - name: Run Azure Cost Optimizer
         env:
@@ -46,6 +37,5 @@ jobs:
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           APPINSIGHTS_INSTRUMENTATIONKEY: ${{ secrets.APPINSIGHTS_INSTRUMENTATIONKEY }}
         run: |
-          echo "CONFIG_FILE=$CONFIG_FILE"
           echo "Running Python script with mode dry-run"
           python src/main.py --mode dry-run
