--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ azure-mgmt-network==25.3.0
 azure-mgmt-resource==23.1.1
 azure-mgmt-sql==3.0.1
 azure-mgmt-storage==21.1.0
+azure-mgmt-subscription==3.1.1
 blinker==1.8.2
 cachetools==5.3.3
 certifi==2024.2.2
