--- a/policies/policies.yaml
+++ b/policies/policies.yaml
@@ -41,10 +41,10 @@ policies:
         value: dev
     actions:
       - type: delete
-    # exclusions:
-    #   - type: tag
-    #     key: exclude
-    #     value: "true"
+    exclusions:
+      - type: tag
+        key: exclude
+        value: "true"
   - name: update-storage-account-sku
     description: Update Storage Account SKU to Standard_LRS for specific SKUs and tags
     resource: "azure.storage"
@@ -87,7 +87,7 @@ policies:
             max_dtu: 100
             off_peak_dtu: 10
             peak_dtu: 20
-            off_peak_start: "20:00"
+            off_peak_start: "18:00"
             off_peak_end: "06:00"
           - name: Premium
             min_dtu: 25
