--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ azure-core==1.30.1
 azure-functions==1.19.0
 azure-identity==1.16.0
 azure-mgmt-compute==31.0.0
+azure-mgmt-consumption==10.0.0
 azure-mgmt-core==1.4.0
 azure-mgmt-costmanagement==4.0.1
 azure-mgmt-monitor==6.0.2
