--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
           echo "APPINSIGHTS_INSTRUMENTATIONKEY=${{ secrets.APPINSIGHTS_INSTRUMENTATIONKEY }}" >> $GITHUB_ENV
           echo "AZURE_STORAGE_ACCOUNT_NAME= ${{ secrets.AZURE_STORAGE_ACCOUNT_NAME  }}" >> $GITHUB_ENV
           echo "AZURE_STORAGE_FILE_SYSTEM_NAME= ${{ secrets.AZURE_STORAGE_FILE_SYSTEM_NAME  }}" >> $GITHUB_ENV
-          echo "ADLS_DIRECTORY_PATH"= ${{ secrets.ADLS_DIRECTORY_PATH  }}" >> $GITHUB_ENV
+          echo "ADLS_DIRECTORY_PATH= ${{ secrets.ADLS_DIRECTORY_PATH  }}" >> $GITHUB_ENV
       - name: Verify environment variables
         run: |
           echo "CONFIG_FILE=$CONFIG_FILE"
