Update ci.yml added manual workflow run
Signed-off-by: Jamel Achahbar <127963872+jamelachahbar@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,11 @@
 name: Azure Cost Optimization Workflow Dry Run
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+  
 
 jobs:
   build:
